src/app/components/home-featured/home-featured.component.scss
$black: #000000;
$dark-grey: #707070;
$medium-grey: #7D828F;
$light-grey: #C8CCD8;
$very-light-grey: #EEEFF4;
$red: #DF5656;


//-----------------Featured Section ----------------
.featured-cont {
    padding: 5% 7%;
    .feat-head-row {
        padding: 2% 0;
        .title-col{
            @media screen and (min-width:800px){
                width: 50%;
            }
            width: 100%;
            h3 {
            font-size: 56px;
        }}
        .button-col {
              @media screen and (min-width:800px){
                width: 50%;
            }
            width: 100%;
            text-align: end;
            button {
                @media screen and (max-width: 757px) {
                    display: none;
                }
                @media screen and (min-width: 1080px) {
                    width: 250px;
                }
                width: 180px;
                height: 60px;
                background-color: $black;
                color: white;
                cursor: pointer;
                align-items: center !important;
                border: 1px solid black;
                img {
                    padding-top: 5px;
                    padding-left: 20px;
                    height: 20px;
                }
                &:hover {
                    background-color: $dark-grey;
                    color: white;
                    border-color: $dark-grey;
                }
            }
        }
    }
    .mobile-btn {
        button {
            margin-top: 20px;
            @media screen and (min-width: 757px) {
                display: none;
            }
            width: 757% !important;
            height: 60px;
            background-color: $black;
            color: white;
            cursor: pointer;
            align-items: center !important;
            border: 1px solid black;
            img {
                padding-top: 5px;
                padding-left: 20px;
                height: 20px;
            }
            &:hover {
                background-color: $dark-grey;
                color: white;
                border-color: $dark-grey;
            }
        }
    }
    .feat-proj-row {
        .project-card-cont {
            @media screen and (min-width:800px){
                width: 530px;
            }
            width: 400px;
            @media screen and (min-width: 1080px) {
                padding: 0 2%;
            }
            padding: 2% 0;
            overflow-x: hidden;
            img {
                @media screen and (max-width: 1500px) {
                    width: 155%;
                    height: 400px;
                }
                @media screen and (max-width: 756px) {
                    width: 120%;
                }
                @media screen and (min-width: 1500px) {
                    width: 100%;
                    height: 600px;
                }
                z-index: -1;
            }
            h1 {
                @media screen and (max-width: 1080px) {
                    position: absolute;
                    left: 70%;
                    margin-top: -32%;
                    font-size: 150px;
                }
                @media screen and (max-width:756px) {
                    display: none;
                    position: absolute;
                    left: 30%;
                    padding-left: 17%;
                }
                @media screen and (min-width: 1080px) {
                    padding-left: 17%;
                    position: absolute;
                    top: 310%;
                    font-size: 200px;
                }
                font-family: sans-serif;
                font-weight: 300;
                color: $very-light-grey;
            }
            .project-card-text {
                @media screen and (min-width: 1080px) {
                    position: absolute !important;
                    top: 350% !important;
                    padding-left: 30px !important;
                }
                @media screen and (max-width: 1080px) {
                    position: absolute;
                    margin-top: -10%;
                    left: 12%;
                }
                @media screen and (max-width:756px) {
                    position: absolute;
                    margin-top: -20%;
                    left: 12%;
                }
                button {
                    width: 250px;
                    height: 60px;
                    background-color: $black;
                    color: white;
                    cursor: pointer;
                    align-items: center !important;
                    border: 1px solid black;
                    img {
                        padding-top: 5px;
                        padding-left: 20px;
                        height: 20px;
                    }
                    &:hover {
                        background-color: $dark-grey;
                        color: white;
                        border-color: $dark-grey;
                    }
                }
                h3 {
                    z-index: 1;
                    font-size: 18px;
                    font-weight: 300;
                    color: $very-light-grey;
                    padding-right: 60%;
                    padding-bottom: 10px;
                }
                button {
                    z-index: 1;
                    width: 250px;
                    height: 30px;
                    background-color: transparent;
                    color: white;
                    cursor: pointer;
                    align-items: center !important;
                    border: 1px solid white;
                    img {
                        padding-top: 5px;
                        padding-left: 20px;
                        height: 20px;
                    }
                    &:hover {
                        background-color: $dark-grey;
                        color: white;
                        border-color: $dark-grey;
                    }
                }
            }
        }
    }
}

